<resources>
    <string name="app_name">MyCard</string>
    <string name="title">My informations</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="phone">Phone number</string>
    <string name="address">Address</string>
    <string name="email">Mail address</string>
    <string name="scan_a_business_card">Scan a business card</string>
</resources>